Set NGConstraintSpace's direction for inline children of a block container

Currently the NGConstraintSpace's direction for inline children of a
block containeris is LTR even if the block container has RTL direction.

BUG=904951

Change-Id: I271f2e2f4b30df6513d84ea149dc73b9532a4ce0
Reviewed-on: https://chromium-review.googlesource.com/c/1334508
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Oriol Brufau <obrufau@igalia.com>
Cr-Commit-Position: refs/heads/master@{#607833}